Compiler/tests/typing/bad/testfile-return-1.rs
fn f() { 42 } fn main() {}
